fixed header spacings

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -52,9 +52,13 @@ ion-back-button {
   height: 48px;
   width: 48px;
   --color: #ffffff;
+  margin-top: -12px;
+  margin-bottom: -12px;
 
   @media only screen and (max-width: 768px) {
     font-size: 24px;
+    margin-top: -8px;
+    margin-bottom: -8px;
   }
 }
 
